2005-10-28 John Luke <john.luke@gmail.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs (PeekCharIsWhitespace):
	fix GTK+ assertion when the next char is a new line by
	using Offset instead of LineOffset
	
2005-10-23 John Luke <john.luke@gmail.com> 

	* MonoDevelop.SourceEditor.Actions/EditActionCollection.cs:
	filter out problematic Masks, so far just LockMask and Mod2Mask

2005-10-23 John Luke <john.luke@gmail.com> 

	* MonoDevelop.SourceEditor.addin.xml: fix space
	* MonoDevelop.SourceEditor.Actions/DefaultEditActions.cs:
	fix completion for space key presses

2005-10-23 John Luke <john.luke@gmail.com> 

	* MonoDevelop.SourceEditor.Actions/IEditAction.cs:
	add PreExecute and PostExecute methods
	* MonoDevelop.SourceEditor.Actions/DefaultEditActions.cs:
	reset PassToBase to false after running the action
	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs:
	call PreExecute and PostExecute methods
	fixes bug #76523

2005-10-19 John Luke <john.luke@gmail.com> 

	* *.cs: fix some warnings by removing unused fields
	
2005-10-19 Christian Hergert <christian.hergert@gmail.com>

	* MonoDevelop.SourceEditor/SourceViewService.cs: Check for a valid source
	languages manager before persisting settings to file.

2005-10-18 John Luke <john.luke@gmail.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs:
	use new TreeNodeExists method instead of relying on an
	exception
	
2005-10-18 John Luke <john.luke@gmail.com> 

	* MonoDevelop.SourceEditor.Codons/EditActionCodon.cs:
	add all the current ModifierTypes in gdk 2.4
	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs:
	order using statements, remove ProcessPressEvent()
	combine UnIndentSelection and IndentSelection
	implement editactions instead of a bunch of switch
	statements to control the editor, mark some methods
	internal
	* MonoDevelop.SourceEditor.Actions/IEditAction.cs:
	add PassToBase property
	* MonoDevelop.SourceEditor.Actions/DefaultEditActions.cs: